--- a/CtCI.ipynb
+++ b/CtCI.ipynb
@@ -36,9 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'p': [0], 'r': [1, 4], 'o': [2], 'g': [3, 10], 'a': [5], 'm': [6, 7], 'i': [8], 'n': [9]}\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "#1.1 Is Unique: Implement an algorithm to determine if a string has all unique characters. What if you cannot use additional data structures?\n",
     "def check_duplicates(word):\n",
@@ -64,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -131,6 +140,90 @@
     "# Test the function\n",
     "string = \"Tact Coa\"\n",
     "print(is_palindrome_permutation(string))  # True\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1.3 URLify: Write a method to replace all spaces in a string with '%20'. You may assume that the string has sufficient space at the end to hold the additional characters, and that you are given the \"true\" length of the string. (Note: If implementing in Java, please use a character array so that you can perform this operation in place.)\n",
+    "# EXAMPLE\n",
+    "# Input: \"Mr John Smith \", 13\n",
+    "# Output: \"Mr%20John%20Smith\"\n",
+    "def urlify(string):\n",
+    "    \n",
+    "    space_count = 0\n",
+    "    \n",
+    "    # Count the number of spaces in the string\n",
+    "    for char in string:\n",
+    "        if char == \" \":\n",
+    "            space_count += 1\n",
+    "    \n",
+    "    #Add 2 spaces for each space in the original string\n",
+    "    n = space_count * 2\n",
+    "\n",
+    "    # Calculate the new string length\n",
+    "    new_string = string + ' ' * (space_count * 2)\n",
+    "    \n",
+    "    # Convert the string to a list of characters\n",
+    "    char_list = list(new_string)\n",
+    "    \n",
+    "    # Loop through the list of characters in reverse order\n",
+    "    for i in range(len(new_string) - 1, -1, -1):\n",
+    "        if char_list[i] == \" \":\n",
+    "            char_list[n - 1] = '0'\n",
+    "            n -= 2\n",
+    "    return \"\".join(char_list)\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M%20ohn Smith    \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(urlify(\"Mr John Smith\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "def move_words_to_right(input_string):\n",
+    "    words = input_string.split()  # Split string into words\n",
+    "    space_count = len(input_string) - len(input_string.rstrip())  # Count spaces at the end\n",
+    "\n",
+    "    # Construct the resulting string with indentation\n",
+    "    result = \" \" * space_count + \" \".join(words)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Example usage\n",
+    "input_string = \"Hello World     \"\n",
+    "output_string = move_words_to_right(input_string)\n",
+    "print(output_string)"
    ]
   },
   {
