--- a/CtCI.ipynb
+++ b/CtCI.ipynb
@@ -144,9 +144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 195,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mr%20John%20Smith\n"
+     ]
+    }
+   ],
    "source": [
     "#1.3 URLify: Write a method to replace all spaces in a string with '%20'. You may assume that the string has sufficient space at the end to hold the additional characters, and that you are given the \"true\" length of the string. (Note: If implementing in Java, please use a character array so that you can perform this operation in place.)\n",
     "# EXAMPLE\n",
@@ -160,71 +168,47 @@
     "    for char in string:\n",
     "        if char == \" \":\n",
     "            space_count += 1\n",
-    "    \n",
-    "    #Add 2 spaces for each space in the original string\n",
-    "    n = space_count * 2\n",
+    "        \n",
+    "    # Convert the string to a list of characters\n",
+    "    char_list = list(string)\n",
     "\n",
     "    # Calculate the new string length\n",
-    "    new_string = string + ' ' * (space_count * 2)\n",
-    "    \n",
-    "    # Convert the string to a list of characters\n",
-    "    char_list = list(new_string)\n",
-    "    \n",
-    "    # Loop through the list of characters in reverse order\n",
-    "    for i in range(len(new_string) - 1, -1, -1):\n",
-    "        if char_list[i] == \" \":\n",
-    "            char_list[n - 1] = '0'\n",
-    "            n -= 2\n",
-    "    return \"\".join(char_list)\n",
+    "    new_length = len(string) + space_count * 2\n",
     "\n",
-    "    \n"
+    "    # Resize the character list\n",
+    "    char_list.extend([''] * space_count * 2)\n",
+    "    \n",
+    "    # # Fill the empty spaces with %20\n",
+    "    for i in reversed(range(len(string))):\n",
+    "        if char_list[i] == \" \":        \n",
+    "            char_list[new_length - 1] = \"0\"\n",
+    "            char_list[new_length - 2] = \"2\"\n",
+    "            char_list[new_length - 3] = \"%\"             \n",
+    "            #print(\"replace  : \",i, char_list)\n",
+    "            new_length -= 3\n",
+    "        else:\n",
+    "            char_list[new_length - 1] = char_list[i]   \n",
+    "            #print(\"movement : \",i, char_list)\n",
+    "            new_length -= 1\n",
+    "    return \"\".join(char_list) \n",
+    "\n",
+    "print(urlify(\"Mr John Smith\"))\n",
+    "#print(urlify(\"Mr John\"))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "M%20ohn Smith    \n"
-     ]
-    }
-   ],
-   "source": [
-    "print(urlify(\"Mr John Smith\"))"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     Hello World\n"
-     ]
-    }
-   ],
-   "source": [
-    "def move_words_to_right(input_string):\n",
-    "    words = input_string.split()  # Split string into words\n",
-    "    space_count = len(input_string) - len(input_string.rstrip())  # Count spaces at the end\n",
-    "\n",
-    "    # Construct the resulting string with indentation\n",
-    "    result = \" \" * space_count + \" \".join(words)\n",
-    "\n",
-    "    return result\n",
-    "\n",
-    "# Example usage\n",
-    "input_string = \"Hello World     \"\n",
-    "output_string = move_words_to_right(input_string)\n",
-    "print(output_string)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
