--- a/CtCI.ipynb
+++ b/CtCI.ipynb
@@ -144,13 +144,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "movement :  12 ['M', 'r', ' ', 'J', 'o', 'h', 'n', ' ', 'S', 'm', 'i', 't', 'h', '', '', '', 'h']\n",
+      "movement :  11 ['M', 'r', ' ', 'J', 'o', 'h', 'n', ' ', 'S', 'm', 'i', 't', 'h', '', '', 't', 'h']\n",
+      "movement :  10 ['M', 'r', ' ', 'J', 'o', 'h', 'n', ' ', 'S', 'm', 'i', 't', 'h', '', 'i', 't', 'h']\n",
+      "movement :  9 ['M', 'r', ' ', 'J', 'o', 'h', 'n', ' ', 'S', 'm', 'i', 't', 'h', 'm', 'i', 't', 'h']\n",
+      "movement :  8 ['M', 'r', ' ', 'J', 'o', 'h', 'n', ' ', 'S', 'm', 'i', 't', 'S', 'm', 'i', 't', 'h']\n",
+      "replace  :  7 ['M', 'r', ' ', 'J', 'o', 'h', 'n', ' ', 'S', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
+      "movement :  6 ['M', 'r', ' ', 'J', 'o', 'h', 'n', ' ', 'n', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
+      "movement :  5 ['M', 'r', ' ', 'J', 'o', 'h', 'n', 'h', 'n', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
+      "movement :  4 ['M', 'r', ' ', 'J', 'o', 'h', 'o', 'h', 'n', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
+      "movement :  3 ['M', 'r', ' ', 'J', 'o', 'J', 'o', 'h', 'n', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
+      "replace  :  2 ['M', 'r', '%', '2', '0', 'J', 'o', 'h', 'n', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
+      "movement :  1 ['M', 'r', '%', '2', '0', 'J', 'o', 'h', 'n', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
+      "movement :  0 ['M', 'r', '%', '2', '0', 'J', 'o', 'h', 'n', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
       "Mr%20John%20Smith\n"
      ]
     }
@@ -184,11 +197,11 @@
     "            char_list[new_length - 1] = \"0\"\n",
     "            char_list[new_length - 2] = \"2\"\n",
     "            char_list[new_length - 3] = \"%\"             \n",
-    "            #print(\"replace  : \",i, char_list)\n",
+    "            print(\"replace  : \",i, char_list)\n",
     "            new_length -= 3\n",
     "        else:\n",
     "            char_list[new_length - 1] = char_list[i]   \n",
-    "            #print(\"movement : \",i, char_list)\n",
+    "            print(\"movement : \",i, char_list)\n",
     "            new_length -= 1\n",
     "    return \"\".join(char_list) \n",
     "\n",
