--- a/CtCI.ipynb
+++ b/CtCI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -144,27 +144,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "movement :  12 ['M', 'r', ' ', 'J', 'o', 'h', 'n', ' ', 'S', 'm', 'i', 't', 'h', '', '', '', 'h']\n",
-      "movement :  11 ['M', 'r', ' ', 'J', 'o', 'h', 'n', ' ', 'S', 'm', 'i', 't', 'h', '', '', 't', 'h']\n",
-      "movement :  10 ['M', 'r', ' ', 'J', 'o', 'h', 'n', ' ', 'S', 'm', 'i', 't', 'h', '', 'i', 't', 'h']\n",
-      "movement :  9 ['M', 'r', ' ', 'J', 'o', 'h', 'n', ' ', 'S', 'm', 'i', 't', 'h', 'm', 'i', 't', 'h']\n",
-      "movement :  8 ['M', 'r', ' ', 'J', 'o', 'h', 'n', ' ', 'S', 'm', 'i', 't', 'S', 'm', 'i', 't', 'h']\n",
-      "replace  :  7 ['M', 'r', ' ', 'J', 'o', 'h', 'n', ' ', 'S', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
-      "movement :  6 ['M', 'r', ' ', 'J', 'o', 'h', 'n', ' ', 'n', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
-      "movement :  5 ['M', 'r', ' ', 'J', 'o', 'h', 'n', 'h', 'n', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
-      "movement :  4 ['M', 'r', ' ', 'J', 'o', 'h', 'o', 'h', 'n', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
-      "movement :  3 ['M', 'r', ' ', 'J', 'o', 'J', 'o', 'h', 'n', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
-      "replace  :  2 ['M', 'r', '%', '2', '0', 'J', 'o', 'h', 'n', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
-      "movement :  1 ['M', 'r', '%', '2', '0', 'J', 'o', 'h', 'n', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
-      "movement :  0 ['M', 'r', '%', '2', '0', 'J', 'o', 'h', 'n', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
-      "Mr%20John%20Smith\n"
+      "movement :  14 ['M', 'r', ' ', ' ', 'J', 'o', 'h', 'n', ' ', ' ', 'S', 'm', 'i', 't', 'h', '', '', '', '', '', '', '', 'h']\n",
+      "movement :  13 ['M', 'r', ' ', ' ', 'J', 'o', 'h', 'n', ' ', ' ', 'S', 'm', 'i', 't', 'h', '', '', '', '', '', '', 't', 'h']\n",
+      "movement :  12 ['M', 'r', ' ', ' ', 'J', 'o', 'h', 'n', ' ', ' ', 'S', 'm', 'i', 't', 'h', '', '', '', '', '', 'i', 't', 'h']\n",
+      "movement :  11 ['M', 'r', ' ', ' ', 'J', 'o', 'h', 'n', ' ', ' ', 'S', 'm', 'i', 't', 'h', '', '', '', '', 'm', 'i', 't', 'h']\n",
+      "movement :  10 ['M', 'r', ' ', ' ', 'J', 'o', 'h', 'n', ' ', ' ', 'S', 'm', 'i', 't', 'h', '', '', '', 'S', 'm', 'i', 't', 'h']\n",
+      "replace  :  9 ['M', 'r', ' ', ' ', 'J', 'o', 'h', 'n', ' ', ' ', 'S', 'm', 'i', 't', 'h', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
+      "replace  :  8 ['M', 'r', ' ', ' ', 'J', 'o', 'h', 'n', ' ', ' ', 'S', 'm', '%', '2', '0', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
+      "movement :  7 ['M', 'r', ' ', ' ', 'J', 'o', 'h', 'n', ' ', ' ', 'S', 'n', '%', '2', '0', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
+      "movement :  6 ['M', 'r', ' ', ' ', 'J', 'o', 'h', 'n', ' ', ' ', 'h', 'n', '%', '2', '0', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
+      "movement :  5 ['M', 'r', ' ', ' ', 'J', 'o', 'h', 'n', ' ', 'o', 'h', 'n', '%', '2', '0', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
+      "movement :  4 ['M', 'r', ' ', ' ', 'J', 'o', 'h', 'n', 'J', 'o', 'h', 'n', '%', '2', '0', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
+      "replace  :  3 ['M', 'r', ' ', ' ', 'J', '%', '2', '0', 'J', 'o', 'h', 'n', '%', '2', '0', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
+      "replace  :  2 ['M', 'r', '%', '2', '0', '%', '2', '0', 'J', 'o', 'h', 'n', '%', '2', '0', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
+      "movement :  1 ['M', 'r', '%', '2', '0', '%', '2', '0', 'J', 'o', 'h', 'n', '%', '2', '0', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
+      "movement :  0 ['M', 'r', '%', '2', '0', '%', '2', '0', 'J', 'o', 'h', 'n', '%', '2', '0', '%', '2', '0', 'S', 'm', 'i', 't', 'h']\n",
+      "Mr%20%20John%20%20Smith\n"
      ]
     }
    ],
@@ -205,30 +207,129 @@
     "            new_length -= 1\n",
     "    return \"\".join(char_list) \n",
     "\n",
-    "print(urlify(\"Mr John Smith\"))\n",
+    "print(urlify(\"Mr  John  Smith\"))\n",
     "#print(urlify(\"Mr John\"))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1.5 One Away: There are three types of edits that can be performed on strings: insert a character, remove a character, or replace a character. Given two strings, write a function to check if they are one edit (or zero edits) away.\n",
+    "# EXAMPLE\n",
+    "# pale, ple -> true\n",
+    "# pales, pale -> true\n",
+    "# pale, bale -> true\n",
+    "# pale, bake -> false\n",
+    "\n",
+    "def one_edit_same_length(word1, word2):\n",
+    "    count_diff = 0\n",
+    "    for i in range(len(word1)):\n",
+    "        if word1[i] != word2[i]:\n",
+    "            count_diff += 1\n",
+    "        if count_diff > 1:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "def one_edit_diff_lengths(word1, word2):\n",
+    "    i = 0\n",
+    "    count = 0\n",
+    "    while i < len(word2):\n",
+    "        if word1[i + count] == word2[i]:\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            count += 1\n",
+    "        if count > 1:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "def one_away(s1, s2):\n",
+    "    # If the length difference between the strings is greater than 1, return False\n",
+    "    if abs(len(s1) - len(s2)) > 1:\n",
+    "        return False\n",
+    "    elif len(s1) == len(s2):\n",
+    "        return one_edit_same_length(s1, s2)\n",
+    "    elif len(s1)  > len(s2):\n",
+    "        return one_edit_diff_lengths(s1, s2)\n",
+    "    elif len(s1)  < len(s2):\n",
+    "        return one_edit_diff_lengths(s2, s1)\n",
+    "    \n",
+    "    \n",
+    "# Test the function\n",
+    "s1 = \"pale\"\n",
+    "s2 = \"ple\"\n",
+    "print(one_away(s1, s2))  # True\n",
+    "print(one_away(\"pales\", \"pale\"))  # True\n",
+    "print(one_away(\"pale\", \"ple\"))  # True\n",
+    "print(one_away(\"pale\", \"bake\"))  # False\n",
+    "print(one_away(\"pale\", \"ales\"))  # False\n",
+    "print(one_away(\"pale\", \"pas\"))  # False"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a2b1c5a3d1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1.6 String Compression: Implement a method to perform basic string compression using the counts of repeated characters.\n",
+    "# For example, the string aabcccccaaa would become a2b1c5a3.\n",
+    "# If the \"compressed\" string would not become smaller than the original string, \n",
+    "# your method should return the original string. You can assume the string has only uppercase and lowercase letters (a - z).\n",
+    "\n",
+    "word = \"aabcccccaaad\" # a2b1c5a3\n",
+    "\n",
+    "def string_compression(word):\n",
+    "# Create a list of tuples with the character and its consecutive count\n",
+    "    char_list = []\n",
+    "    count = 1\n",
+    "    for i in range(len(word)):\n",
+    "        if i < len(word) - 1 and word[i] == word[i + 1]:\n",
+    "            count += 1\n",
+    "        else:\n",
+    "            char_list.append((word[i], count))\n",
+    "            count = 1\n",
+    "    # Create a new string with the character and its count\n",
+    "    new_string = \"\"\n",
+    "    for item in char_list:\n",
+    "        new_string += item[0] + str(item[1])\n",
+    "    # Return the original string if the new string is not shorter\n",
+    "    if len(new_string) >= len(word):\n",
+    "        return word\n",
+    "    else:\n",
+    "        return new_string\n",
+    "    \n",
+    "# Test the function\n",
+    "print(string_compression(word))\n",
+    "\n",
+    "    \n",
+    "\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
@@ -247,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4
  },
